<resources>
    <string name="app_name">zoop-android-sample</string>
    <string name="home">home</string>

    <string name="sales">Nova Venda</string>
    <string name="terminals">Maquininhas</string>
    <string name="logout">Sair</string>

    <string name="username_placeholder">Digite seu e-mail</string>
    <string name="password_placeholder">Digite sua senha</string>
    <string name="charge_button_login">Entrar</string>

    <string name="username_error">O campo e-mail é obrigatório</string>
    <string name="password_error">O campo senha é obrigatório</string>

    <string name="login_connection_error">Erro de conexão</string>
    <string name="user_without_permission_error">Usuário sem permissões</string>

    <string name="dialog_logout_title">Sair</string>
    <string name="dialog_logout_message">Tem certeza que deseja sair?</string>
    <string name="label_yes">SIM</string>
    <string name="label_no">NÃO</string>

    <string name="label_loading">Por favor, aguarde ...</string>

    <string name="welcome_message">Olá, %1$s</string>

    <string name="label_select_available_terminal">Selecione uma maquininha da lista</string>
    <string name="bluetooth_discovering_compatible_devices">Procurando maquininha</string>

    <string name="label_no_terminal_available">Não há maquininhas disponíveis</string>

    <string name="permission_alert_title">Permissão de localização necessária</string>
    <string name="permission_alert_text">Precisamos da permissão para acessar os dados da conexão com a maquininha</string>

    <string name="terminal_incompatible_text">Maquininha Incompatível</string>
    <string name="terminal_compatible_text">Maquininha Compatível</string>
    <string name="terminal_partially_compatible_text">Maquininha Parcialmente Compatível</string>
    <string name="button_terminal_configuration_finished">OK</string>
    <string name="button_terminal_configuration_finished_cancel">Cancelar</string>
    <string name="error_validator_terminal">Não foi possível conectar. Tente novamente.</string>

    <string name="charge_hint_type_value_with_decimals">Valor da venda</string>
    <string name="charge_label_choose_payment_action_below">Selecione a opção de pagamento</string>
    <string name="void_label_payment_action_below">Opção de pagamento</string>
    <string name="number_of_installments">Número de parcelas</string>

    <string name="charge_button_credit_only">Crédito</string>
    <string name="charge_button_charge_credit_with_installments">Crédito Parcelado</string>
    <string name="charge_button_charge_debit">Débito</string>

    <string name="value_error">O campo valor é obrigatório</string>

    <string name="charge_button_pay_label">Pagar</string>
    <string name="label_cancel">Cancelar</string>
    <string name="charge_button_receipt_label">Ver Comprovante</string>

    <string name="start_connection_terminal">Conectando&#8230;</string>
    <string name="start_transaction_status">Status da Transação</string>
    <string name="label_title_error_brand">Cartão não identificado pelo chip</string>
    <string name="label_title_abort_brand">Operação cancelada pelo usuário</string>
    <string name="text_transaction_step4_approved">Transação Aprovada</string>
    <string name="text_transaction_step5_duplicated">Transação já efetuada</string>

    <string name="label_try_again">Tentar novamente</string>
    <string name="label_ok">OK</string>
    <string name="button_new_transaction">Nova Venda</string>
    <string name="charge_button_void_transaction">Cancelar Transação (Estorno)</string>
    <string name="button_print_receipt_merchant">Visualizar Via Estabelecimento</string>
    <string name="button_print_receipt_cardholder">Visualizar Via Cliente</string>

    <string name="error_activity_receipt">Problemas para procesar o Recibo</string>
    <string name="token_error_activity_receipt">Sessão expirada</string>

    <string name="unkown_error">Erro desconhecido</string>

    <string name="dialog_void_receipt_transaction_text_confirm_void">Você confirma o cancelamento dessa venda (estorno da transação), que cancelará o recebimento de %1$s do cartão iniciado em %2$s?</string>
    <string name="text_void_transaction_step4_approved">Transação Estornada</string>
    <string name="logo_zoop_receipt">Logo Zoop Receipt</string>

</resources>

